@@ -10,4 +10,6 @@ set(UTILITY_SRC
     ${CMAKE_CURRENT_LIST_DIR}/ThreadPool.hpp
     ${CMAKE_CURRENT_LIST_DIR}/PlotChart.cpp
     ${CMAKE_CURRENT_LIST_DIR}/PlotChart.hpp
+    ${CMAKE_CURRENT_LIST_DIR}/HDF5Tool.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/HDF5Tool.hpp
     PARENT_SCOPE)
